[metadata]
name = python_questions
author = Tony Narlock
description = I don't know if this is supported in typing or mypy
keywords = question

[options]
python_requires = >=3.10, <4
install_requires =
    requests
    mypy
    typing-extensions
    types-requests

[options.extras_require]
test =
    pytest
